2005-03-09  Jan Patera <patera@users.sourceforge.net>

	* exif_data.c: Final fix of Ubuntu Security Notice USN-91-1
	  https://bugzilla.ubuntulinux.org/show_bug.cgi?id=7152
	  (CAN-2005-0664)

2005-02-08  Hans Ulrich Niedermann <gp@n-dimensional.de>

	* autogen.sh: Updated build system:
	  - doesn't require gettextize any more (using autopoint now)
	  - uses all the built-in magic from autoreconf
	* configure.in, */Makefile.am: Build variable cleanup:
	  - use common definition for AM_CFLAGS (remove INCLUDES in
	    **/Makefile.am)
	  - define LIBEXIF_LOCALEDIR and LIBMNOTE_LOCALEDIR in config.h
	  - allow user to add CFLAGS at ./configure time by setting CFLAGS
	  - add intl/ to include path only if building the included
	    libintl
	  - check whether -lm is actually required. This enables
	    crosscompilation for windows targets:
	    ./configure --host=i586-mingw32msvc --disable-nls
	* m4/gp-config-msg.m4, m4/gp-gettext-hack.m4: New macros

2004-12-17  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.c: Work towards a non-recursive version of
	  (exif_loader_write).

2004-12-17  Lutz Mueller <lutz@users.sourceforge.net>

	Lars Ellenberg <l.g.e@web.de> fixed a bug that I introduced
	in the last commit:

	* libexif/exif-loader.c: Don't substract 2 bytes twice.

2004-12-12  Lutz Mueller <lutz@users.sourceforge.net>

	Pointed out by Lars Ellenberg <l.g.e@web.de>:

	* libexif/exif-loader.c: Honor indirect offsets in FUJI_RAW-files.
	  Don't perform unnecessary checks for known data formats.

2004-12-11  Lutz Mueller <lutz@users.sourceforge.net>

	Inspired by suggestions from Lars Ellenberg <l.g.e@web.de>:

	* libexif/exif-data.c: Fix spelling error.
	* libexif/exif-loader.c (exif_loader_write): Rewrite logic to 
	  make the loader handle more file types.

2004-12-08  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-entry.c: Data format of EXIF_TAG_USER_COMMENT:
	  Some packages like Canon ZoomBrowser EX 4.5 store only